banner,icon add and some erore fixed

--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
   
         <section id="banner">
             <div class="banner-content">
-                <button class="b-btn">Early Access Now Open</button>
+                <button class="b-btn"><i class="fa-regular fa-circle-dot"></i>Early Access Now Open</button>
                 <h1>Structured thinking,<br><span class="color-green">not just note-taking.</span></h1>
                 <p>A private space to store notes, links, and learning summaries — designed to <br> help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                 <div>
-                <button class="btn">Start Building Your Vault</button>
-                <button class="btn">See How It Works</button>
+                <button class="btn">Start Building Your Vault <i class="fa-solid fa-arrow-right"></i></button> <button class="btn see-how"><i class="fa-solid fa-play"></i> See How It Works<button>
             </div>
             </div>
             
@@ -120,7 +119,7 @@
             </div>
             
             <div>
-                    <button class="btn">Get Early Access</button>
+                    <button class="btn">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
 
                 <p class="peragraph">Free during early access • No credit card needed</p>
